# rustdoc

./: .gitignore  Cargo.toml  README.md
a-getting-start/: Cargo.toml
a-getting-start/src/: main.rs
anyhow-practice/: Cargo.toml  config.json
anyhow-practice/src/: main.rs  read_file.rs
axum-practice/: Cargo.toml
axum-practice/src/: main.rs
b-guessing-game/: Cargo.toml
b-guessing-game/src/: main.rs
backyard/src/: main.rs
c-programming-concepts/: Cargo.toml
c-programming-concepts/src/: func.rs  main.rs  mut_reference.rs  reference.rs  shadowing.rs  tuple.rs
d-ownership/: Cargo.toml
d-ownership/src/: main.rs  ownership_func.rs
default-trait/: Cargo.toml
default-trait/src/: main.rs
dyn-practice/: Cargo.toml
dyn-practice/src/: main.rs
enum-practice/: Cargo.toml
enum-practice/src/: main.rs  match_exhaust.rs  move_ownership.rs
error-handling/: Cargo.toml
error-practice/: Cargo.toml
error-practice/src/: main.rs  our_error.rs  question_with_option.rs  quote.rs
generic-practice/: Cargo.toml
generic-practice/src/: display.rs  largest.rs  main.rs  special_constraint.rs
hashmap-practice/: Cargo.toml
hashmap-practice/src/: main.rs
lifetime-pratice/: Cargo.toml
lifetime-pratice/src/: anoymos.rs  dangerling_reference.rs  lifetime_elision.rs  main.rs  struct_demo.rs
minigrep/: README.md
minigrep/src/: lib.rs  main.rs
n-closure/: Cargo.toml
n-closure/src/: basic.rs  main.rs  range.rs  summary.rs
option-practice/: Cargo.toml
reqwest-practice/: Cargo.toml
serde-practice/: Cargo.toml
string-practice/: Cargo.toml
struct-practice/: Cargo.toml
tracing-practice/: Cargo.toml
trait-pratice/: Cargo.toml
understand-trait/: Cargo.toml
vect-practice/: Cargo.toml
(+26 files in other folders)
