[workspace]
resolver = "3"
members = ["a-getting-start", "anyhow-practice", "axum-practice", "b-guessing-game", "backyard", "c-programming-concepts", "d-ownership", "default-trait", "dyn-practice", "error-handling", "minigrep", "n-closure", "option-practice", "reqwest-practice", "serde-practice", "smart-pointer", "tracing-practice", "understand-trait"]
