[package]
name = "axum-practice"
version = "0.1.0"
edition = "2024"

[dependencies]
# web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace","cors"] }
# async
tokio = { version = "1", features = ["full"] }
# log tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0.219", features = ["derive"] }
